[project]
name = "neurous-prompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langsmith>=0.8.9",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
